--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "prettier": "^3.1.0"
   },
   "description": ""
