--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "scripts": {
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./public/styles/style.css --watch",
-    "prettier": "npx prettier --write **/*.ejs",
     "dev": "npx nodemon ./index.js"
   },
   "keywords": [],
@@ -19,8 +18,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "prettier": "^3.1.0"
+    "express": "^4.18.2"
   },
   "description": ""
 }
