--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2"
   },
   "description": ""
 }
